Added RDoc documentation

--- a/.rvmrc
+++ b/.rvmrc
@@ -20,3 +20,5 @@ else
   rvm --create  "$environment_id"
 fi
 
+# ======================================================================
+export JRUBY_OPTS=--1.9
